--- a/index.html
+++ b/index.html
@@ -2,3 +2,12 @@
 
 <h1>Hello Git</h1>
 <footer>Copyright © 2025 Rifa</footer>
+
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
+
