--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
+<html>
+<head><title>index</title>
+<style>
+  body {
+    background-color: #f0f0f0;
+    font-family: Arial;
+  }
+</style>
+
+</head>
+<body>
 <h1>Welcome to My Git Coursework Project</h1>
+
 
 <h1>Hello Git</h1>
 <footer>Copyright © 2025 Rifa</footer>
