feat(main): update features heading differently

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 </nav>
 
 <section>
-  <h2>Features</h2>
+  <h2>Features (from main branch)</h2>
   <p>This is a sample feature section for demonstration.</p>
 </section>
