--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <h1>Welcome to My Git Coursework Project</h1>
 
 
+<p>Unstaged change for demo</p>
+<p>Hello</p>
+
+
 <h1>Hello Git</h1>
 <footer>Copyright © 2025 Rifa</footer>
 
